Atualizado por profesor

--- a/Tarea 1-1.ipynb
+++ b/Tarea 1-1.ipynb
@@ -116,12 +116,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3fcf88b8",
+   "cell_type": "markdown",
+   "id": "190df2d4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Calificación: 6.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62c5c233",
+   "metadata": {},
+   "source": [
+    "La respuesta es correcta. Como se explicó en clase, y como está escrito en el programa del curso, 2.0 puntos depende de los comentarios y la claridad del código. Bajé 0.5 de esos porque no hay ninguna explicación acerca de lo que hiciste."
+   ]
   }
  ],
  "metadata": {
@@ -140,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
