Atualizado por profesor

--- a/Tarea 2-1.ipynb
+++ b/Tarea 2-1.ipynb
@@ -131,12 +131,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d86f288c",
+   "cell_type": "markdown",
+   "id": "73ca8bc4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Calificación: 7.0"
+   ]
   }
  ],
  "metadata": {
@@ -155,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
