Atualizado por profesor

--- a/Tarea 3-7.ipynb
+++ b/Tarea 3-7.ipynb
@@ -283,12 +283,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3c6bcc5",
+   "cell_type": "markdown",
+   "id": "c3f2ed6e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Calificación: 7.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94f63f45",
+   "metadata": {},
+   "source": [
+    "Faltó solo ser más preciso: En el primer caso, en los últimos términos de la sumatoria, se suman números muy diferentes (la suma va siendo un número grande y el siguiente número es pequeño). En estas situaciones se incurre siempre en un mayor error de redondeo (el computador al sumar primero convierte ambos números al exponente del número más grande)."
+   ]
   }
  ],
  "metadata": {
@@ -307,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
