--- a/Tarea 4-8.ipynb
+++ b/Tarea 4-8.ipynb
@@ -126,12 +126,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6bb8493",
+   "cell_type": "markdown",
+   "id": "7fe4a369",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Calificación: 7.0\n",
+    "\n",
+    "Sólo un comentario: No era necesario abrir el archivo dos veces, eso puede tardar tiempo si el archivo es muy grande."
+   ]
   }
  ],
  "metadata": {
@@ -150,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
