--- a/Tarea 5-10.ipynb
+++ b/Tarea 5-10.ipynb
@@ -102,12 +102,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75321187",
+   "cell_type": "markdown",
+   "id": "b61a9986",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Calificación: 4.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbfec252",
+   "metadata": {},
+   "source": [
+    "El código está bien y comentado. Sin embargo hay un problema conceptual: Estamos pidiendo la probabilidad de ver $n$ partículas dado que el detector indicó al menos una partícula. Esta es una probabilidad condicional:\n",
+    "\n",
+    "$$\n",
+    "P(n|n>1)\n",
+    "$$"
+   ]
   }
  ],
  "metadata": {
@@ -126,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
