Atualizado por profesor

--- a/Tarea 6-5.ipynb
+++ b/Tarea 6-5.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "62dd94eb",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,11 @@
    "outputs": [],
    "source": [
     "#Elejimos de manera aleatoria 20 números de los 10000000 originales y repetimos esto 10000 veces.\n",
-    "muestra = np.array([random.choices(numeros, k = 20) for n in range(10000)])"
+    "muestra = np.array([random.choices(numeros, k = 20) for n in range(10000)])\n",
+    "# COMENTARIO: \n",
+    "# hay una manera más eficiente de hacerlo que no te mata el pc: \n",
+    "# muestra = np.random.uniform(0, 1, 10000000).reshape((-1,20))\n",
+    "# En un contexto profesional o de investigación hay que usar el poder de numpy!"
    ]
   },
   {
@@ -241,6 +245,16 @@
    "metadata": {},
    "source": [
     "Repetí la simulación algunas veces y la máxima desviación estándar que encontré era algo mayor a 60, por lo que podría estimar el error de la simulación esta entorno a un 6%"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1428dba",
+   "metadata": {},
+   "source": [
+    "<span style=\"color:red;\">El error porcentual debe ser estimado como $\\mu/\\sigma$, que en este caso es del orden de $1\\%$</span>\n",
+    "\n",
+    "<span style=\"color:red;\">No es correcto correr muchas veces y tomar el peor valor de $\\sigma$. Una mejor estimación de $\\sigma$ es tomando el valor típico al correr muchas veces.</span>"
    ]
   },
   {
@@ -416,12 +430,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a7169963",
+   "cell_type": "markdown",
+   "id": "4c078119",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Calificación: 6.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "669171f9",
+   "metadata": {},
+   "source": [
+    "No se bajó la nota por los comentarios de arriba. Eran sólo para aclarar.\n",
+    "\n",
+    "Se bajó la nota porque faltó comparar con la probabilidad obtenida a partir de la gaussiana."
+   ]
   }
  ],
  "metadata": {
@@ -440,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
