Atualizado por profesor

--- a/Tarea 7-3.ipynb
+++ b/Tarea 7-3.ipynb
@@ -359,6 +359,22 @@
     "#La altura del agua en metros es:\n",
     "r-0.45710001024649505"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f92d22ee",
+   "metadata": {},
+   "source": [
+    "# Calificación: 6.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38d1ada8",
+   "metadata": {},
+   "source": [
+    "El código está bien, pero hay errores en la derivación de la ecuación que se usa."
+   ]
   }
  ],
  "metadata": {
@@ -377,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
